# uHID-userspace

./: .gitignore  10-uisp.rules  CMakeLists.txt  Makefile  Makefile.old  README  README.md  TODO  TODO.md  antares.hex  crc32.c  descriptor.c  libuhid.c  libuisp.c  main.c  manager.c  uappmgr  uhidpkg.c  uhidtool.c  uisptool  uisptool.c  usb-libusb.c  usb-windows.c  usbcalls.h
cmake/cross/: i686.cmake
cmake/modules/: FindHidApi.cmake
debian/: README  README.Debian  README.source  changelog  control  copyright  docs  rules
include/: libuhid.h  libuisp.h
old/: hidsdi.h
scripts/: build  build.bat  build.sh
tests/: write-verify.sh
